# test-driven-agent-development

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
docs/: 1-python-workflow.md  2-defining-and-running-agents.md  3-test-driven-agent-development.md  local-setup.md
src/find_surf_spots/: agent.py  schema.py  workflow.py
src/find_surf_spots/tools/: openmeteo.py  openstreetmap.py
tests/: test_agent.py  test_workflow.py
tests/tools/: test_openmeteo.py  test_openstreetmap.py
